[gd_scene load_steps=5 format=1]

[ext_resource path="res://Hammer.gd" type="Script" id=1]
[ext_resource path="res://hammer4Sides.tex" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 4.00019, 4.02657 )

[sub_resource type="RectangleShape2D" id=20]

custom_solver_bias = 0.0
extents = Vector2( 3.97772, 5.06006 )

[node name="Hammer" type="KinematicBody2D" groups=[
"weapon",
]]

input/pickable = false
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.90735e-06, 3.01059 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 19 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.0449343, -2.98812 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 20 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 2.96565, 0.0449333 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 20 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, -3.07799, 0.0449333 )
shapes/3/trigger = false
collision/layers = 4
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 2
hframes = 2
frame = 1

[node name="UpCollision" type="CollisionShape2D" parent="." groups=[
"collider",
]]

visibility/visible = false
transform/pos = Vector2( 1.90735e-06, 3.01059 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = 0

[node name="DownCollision" type="CollisionShape2D" parent="." groups=[
"collider",
]]

visibility/visible = false
transform/pos = Vector2( 0.0449343, -2.98812 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = 1

[node name="RightCollision" type="CollisionShape2D" parent="." groups=[
"collider",
]]

visibility/visible = false
transform/pos = Vector2( 2.96565, 0.0449333 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 2

[node name="LeftCollision" type="CollisionShape2D" parent="." groups=[
"collider",
]]

visibility/visible = false
transform/pos = Vector2( -3.07799, 0.0449333 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 3


